# ffi-rust-go

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
golib/: go.mod  gophernize.go  main.go
src/: main.rs
testc/: ffi_go_rust.c  libA.lib  libffi_go_rust.lib  libnosql_db_sdk_ffi.h  makelib.c  use_ffi_go_rust.c  useclib.c  uselib.c
