[package]
name = "ffi-rust-go"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This is a ffi that calls go from rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cgo_oligami = "0.3"

# [target."cfg(target_os = \"windows\")".build-dependencies]
# libc = "0.2"
